u can add tags to entries

--- a/app/src/main/res/layout/tag_popup.xml
+++ b/app/src/main/res/layout/tag_popup.xml
@@ -67,7 +67,7 @@
 
                 android:ems="10"
                 android:hint="Ex. Clothing"
-                android:inputType="textLongMessage" />
+                android:inputType="textCapWords|textLongMessage" />
         </LinearLayout>
 
         <LinearLayout
