--- a/app/src/main/res/layout/newentrypopup.xml
+++ b/app/src/main/res/layout/newentrypopup.xml
@@ -176,6 +176,34 @@
                 android:hint="Ex. Bananas for new diet"
                 android:inputType="textLongMessage" />
         </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_height="40dp"
+                android:layout_width="85dp"
+                >
+                <TextView
+                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"
+                    android:text="Tag"
+                    android:textStyle="bold"
+                    android:textColor="@color/black_overlay"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    />
+            </LinearLayout>
+            <EditText
+                android:layout_marginLeft="29dp"
+                android:id="@+id/tagEditText"
+                android:layout_width="267dp"
+                android:layout_height="wrap_content"
+
+                android:ems="10"
+                android:hint="Ex. Clothing"
+                android:inputType="textLongMessage" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/submitButton"
@@ -185,7 +213,7 @@
             android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="5dp"
             android:text="Submit"/>
         <!--
         android:onClick="showConfirmPopUp"
