--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
     <color name="lightSeaGreen">#26a69a</color>
     <color name="mediumSeaGreen">#009688</color>
     <color name="darkSeaGreen">#00897b</color>
-
+    <color name="black">#000</color>>
     <color name="logColor">#ffee58</color>>
 
 
