--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -93,7 +93,8 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:visibility="visible">
             <LinearLayout
                 android:layout_height="40dp"
                 android:layout_width="100dp"
@@ -102,7 +103,7 @@
                 <TextView
                     android:layout_height="40dp"
                     android:layout_width="wrap_content"
-                    android:text="@string/location"
+                    android:text="Tag"
                     android:textStyle="bold"
                     android:textColor="@color/black_overlay"
                     android:gravity="center"
@@ -110,43 +111,16 @@
                     android:layout_marginLeft="20dp"
                     />
             </LinearLayout>
+
             <EditText
-                android:id="@+id/locationEditTextDetailActivity"
+                android:id="@+id/tagEditTextDetailActivity"
+                android:layout_width="259dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:layout_width="259dp"
                 android:ems="10"
-                android:hint="Ex. The Supermarket"
-                android:inputType="textShortMessage"
+                android:hint="Ex. Clothing"
+                android:inputType="textCapWords|textShortMessage"
                 android:visibility="visible" />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:layout_height="40dp"
-                android:layout_width="100dp"
-                >
-                <TextView
-                    android:layout_height="40dp"
-                    android:layout_width="wrap_content"
-                    android:text="@string/details"
-                    android:textStyle="bold"
-                    android:textColor="@color/black_overlay"
-                    android:gravity="center"
-                    android:textSize="18dp"
-                    android:layout_marginLeft="20dp"
-                    />
-            </LinearLayout>
-            <EditText
-                android:id="@+id/detailsEditTextDetailActivity"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_width="259dp"
-                android:ems="10"
-                android:hint="Ex. Bananas for new diet"
-                android:inputType="textLongMessage" />
         </LinearLayout>
 
         <Button
