--- a/app/src/main/res/layout/log_listview_detail.xml
+++ b/app/src/main/res/layout/log_listview_detail.xml
@@ -14,23 +14,6 @@
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/logDetailsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/logMainTextView"
-        android:layout_below="@+id/logLocationTextView"
-        android:layout_marginBottom="10dp"
-        android:text="Details" />
-
-    <TextView
-        android:id="@+id/logLocationTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/logMainTextView"
-        android:layout_below="@+id/logMainTextView"
-        android:text="Location" />
-
-    <TextView
         android:id="@+id/logAmountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,13 +25,29 @@
         android:textSize="24sp" />
 
     <TextView
+        android:layout_marginTop="-2dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/newTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/logDetailsTextView"
-        android:layout_alignEnd="@+id/logAmountTextView"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/logAmountTextView"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/new_bg"
         android:text="New!"
         android:textSize="10sp"
         android:visibility="visible" />
+
+    <TextView
+        android:layout_marginTop="5dp"
+        android:id="@+id/logTagTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_alignStart="@+id/logMainTextView"
+        android:layout_below="@+id/logMainTextView"
+        android:text="TAGTITLE" />
 </RelativeLayout>
