--- a/app/src/main/res/layout/tag_listview_detail.xml
+++ b/app/src/main/res/layout/tag_listview_detail.xml
@@ -9,7 +9,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:text="#Color"
         android:textSize="24sp" />
 
@@ -21,5 +21,6 @@
         android:layout_alignTop="@+id/colorTagTextView"
         android:layout_marginEnd="24dp"
         android:text="titletitle"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_marginBottom="5dp"/>
 </RelativeLayout>
