--- a/app/src/main/res/layout/tag_listview_detail.xml
+++ b/app/src/main/res/layout/tag_listview_detail.xml
@@ -13,6 +13,8 @@
         android:text="#Color"
         android:textSize="24sp" />
 
+
+
     <TextView
         android:id="@+id/titleTagTextView"
         android:layout_width="wrap_content"
@@ -23,4 +25,15 @@
         android:text="titletitle"
         android:textSize="24sp"
         android:layout_marginBottom="5dp"/>
+
+    <TextView
+        android:id="@+id/defaultBooleanTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/colorTagTextView"
+        android:layout_toStartOf="@+id/titleTagTextView"
+        android:background="@drawable/new_bg"
+        android:layout_marginRight="10dp"
+        android:visibility="visible"
+        android:text="Default" />
 </RelativeLayout>
