--- a/app/src/main/res/layout/tag_popup.xml
+++ b/app/src/main/res/layout/tag_popup.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
-    android:layout_height="300dp"
+    android:layout_height="315dp"
     android:layout_gravity="center"
     android:background="@color/lightgray"
     android:orientation="vertical"
@@ -53,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:gravity="center"
-                    android:text="Title"
+                    android:text="@string/title"
                     android:textColor="@color/black_overlay"
                     android:textSize="18dp"
                     android:textStyle="bold" />
@@ -83,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:gravity="center"
-                    android:text="Colour"
+                    android:text="@string/color"
                     android:textColor="@color/black_overlay"
                     android:textSize="18dp"
                     android:textStyle="bold" />
@@ -104,18 +104,25 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Ex. FFFFFF"
+                android:maxLength="6"
                 android:inputType="textShortMessage"
                 android:visibility="visible" />
         </LinearLayout>
 
-
         <Button
-            android:id="@+id/submitButton"
-
+            android:id="@+id/colorPickerButton"
             android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
+            android:text="Color Picker"
+            android:textColor="@color/darkSeaGreen"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/submitButton"
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="Submit"
             android:textColor="@color/darkSeaGreen"
             android:textSize="40dp" />
