--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -4,38 +4,40 @@
 
     <ImageView
         android:id="@+id/slideImageView"
-        android:paddingTop="10dp"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_above="@+id/headingTextView"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
         android:background="@drawable/circlebackgroundpurple"
         android:gravity="center"
         android:padding="10dp"
-        android:visibility="visible"
-        android:src="@mipmap/ic_whatshot_black_24dp" />
+        android:src="@mipmap/ic_whatshot_black_24dp"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/headingTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/bodyTextView"
+        android:layout_below="@+id/slideImageView"
         android:layout_centerHorizontal="true"
+
         android:text="HEADING"
-        
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/bodyTextView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/headingTextView"
         android:gravity="center"
-        android:padding="35dp"
-
+        android:background="@drawable/dots_bg"
+        android:padding="25dp"
         android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. lorem Ipsum has been the industry's standard dummy text ever since the"
         android:textColor="@color/lightgray"
         android:textSize="24sp" />
