--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -22,106 +22,109 @@
             android:textColor="@color/green"
             android:gravity="center"
             android:textSize="26dp"/>
-        <LinearLayout
+        <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:layout_height="40dp"
-                android:layout_width="100dp"
-                >
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
-                <TextView
-                    android:layout_height="40dp"
-                    android:layout_width="wrap_content"
-                    android:text="@string/amount"
-                    android:textStyle="bold"
-                    android:textColor="@color/black_overlay"
-                    android:gravity="center"
-                    android:textSize="18dp"
-                    android:layout_marginLeft="20dp"
-                    />
-            </LinearLayout>
+
             <TextView
-                android:layout_height="40dp"
-                android:textColor="@color/green"
                 android:layout_width="wrap_content"
-                android:text="$"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:layout_marginLeft="158dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center"
+                android:text="@string/amount"
+                android:textColor="@color/black_overlay"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
-                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/amountEditTextDetailActivity"
+                android:gravity="center"
+                android:text="$"
+                android:textColor="@color/green"
+
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
             <EditText
                 android:id="@+id/amountEditTextDetailActivity"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
                 android:ems="10"
                 android:hint="Ex. 9.99"
                 android:inputType="numberSigned|numberDecimal" />
-        </LinearLayout>
-        <LinearLayout
+        </RelativeLayout>
+        <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:layout_width="100dp"
-                >
-                <TextView
-                    android:layout_height="40dp"
-                    android:layout_width="wrap_content"
-                    android:text="@string/date"
-                    android:textStyle="bold"
-                    android:textColor="@color/black_overlay"
-                    android:gravity="center"
-                    android:textSize="18dp"
-                    android:layout_marginLeft="20dp"
-                    />
-            </LinearLayout>
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center"
+                android:text="@string/date"
+                android:textColor="@color/black_overlay"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
 
             <EditText
                 android:id="@+id/dateEditTextDetailActivity"
 
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
                 android:layout_width="259dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
                 android:ems="10"
                 android:hint="YYYY-MM-DD"
                 android:inputType="datetime" />
-        </LinearLayout>
-        <LinearLayout
+        </RelativeLayout>
+        <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
             android:visibility="visible">
-            <LinearLayout
-                android:layout_height="40dp"
-                android:layout_width="100dp"
-                >
 
-                <TextView
-                    android:layout_height="40dp"
-                    android:layout_width="wrap_content"
-                    android:text="Tag"
-                    android:textStyle="bold"
-                    android:textColor="@color/black_overlay"
-                    android:gravity="center"
-                    android:textSize="18dp"
-                    android:layout_marginLeft="20dp"
-                    />
-            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center"
+                android:text="Tag"
+                android:textColor="@color/black_overlay"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/tagEditTextDetailActivity"
                 android:layout_width="259dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
                 android:ems="10"
                 android:hint="Ex. Clothing"
                 android:inputType="textCapWords|textShortMessage"
                 android:visibility="visible" />
-        </LinearLayout>
+        </RelativeLayout>
 
         <Button
             android:id="@+id/updateButton"
