--- a/app/src/main/res/layout/activity_tag_detail.xml
+++ b/app/src/main/res/layout/activity_tag_detail.xml
@@ -25,76 +25,79 @@
             android:textSize="26dp"
             android:textStyle="bold" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
-            <LinearLayout
-                android:layout_width="100dp"
-                android:layout_height="40dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="20dp"
-                    android:gravity="center"
-                    android:text="@string/title"
-                    android:textColor="@color/black_overlay"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center"
+                android:text="@string/title"
+                android:textColor="@color/black_overlay"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
 
             <EditText
                 android:id="@+id/titleEditTextTagDetailActivity"
                 android:layout_width="256dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
                 android:ems="10"
                 android:hint="Ex. Clothing"
                 android:inputType="textCapWords" />
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
-            <LinearLayout
-                android:layout_width="100dp"
-                android:layout_height="40dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="20dp"
-                    android:gravity="center"
-                    android:text="@string/color"
-                    android:textColor="@color/black_overlay"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:layout_marginLeft="180dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center"
+                android:text="@string/color"
+                android:textColor="@color/black_overlay"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/colorEditTextTagDetailActivity"
                 android:text="#"
                 android:textColor="@color/green"
+                android:gravity="center"
                 android:textSize="18sp"
-                android:textStyle="bold"
-
-                />
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/colorEditTextTagDetailActivity"
                 android:layout_width="105dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
                 android:ems="10"
                 android:hint="Ex. FFFFFF"
                 android:inputType="textCapCharacters"
                 android:maxLength="6" />
-        </LinearLayout>
+        </RelativeLayout>
         <Button
             android:id="@+id/colorPickerButton"
             android:layout_width="300dp"
@@ -124,14 +127,15 @@
         android:id="@+id/defaultTagTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:gravity="center"
+        android:padding="10dp"
         android:text="This is the default tag. You may edit it to fit your needs."
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/deleteTagDetailButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"></TextView>
     <Button
         android:id="@+id/deleteTagDetailButton"
