--- a/app/src/main/res/layout/newentrypopup.xml
+++ b/app/src/main/res/layout/newentrypopup.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="350dp"
+    android:layout_width="330dp"
     android:layout_height="320dp"
     android:background="@color/lightgray"
     android:padding="7dp"
-    android:layout_gravity="center"
-    >
+    android:layout_gravity="center">
     <LinearLayout
         android:layout_height="35dp"
         android:layout_width="match_parent">
@@ -26,7 +25,7 @@
 
         />
     <TextView
-        android:layout_marginLeft="276dp"
+        android:layout_marginLeft="253dp"
         android:id="@+id/txtclose"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -79,7 +78,7 @@
                 android:text="$"
                 android:textStyle="bold"
                 android:textSize="18sp"
-                android:layout_marginLeft="120dp"
+                android:layout_marginLeft="100dp"
                 />
             <EditText
                 android:id="@+id/amountEditText"
@@ -112,7 +111,7 @@
                 android:id="@+id/dateEditText"
                 android:layout_width="259dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="29dp"
+                android:layout_marginLeft="9dp"
 
                 android:ems="10"
                 android:hint="YYYY-MM-DD"
@@ -201,23 +200,34 @@
                 android:id="@+id/tagEditText"
                 android:layout_width="267dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="29dp"
+                android:layout_marginLeft="9dp"
 
                 android:ems="10"
                 android:hint="Ex. Clothing"
                 android:inputType="textCapWords|textLongMessage" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/submitButton"
 
-            android:textColor="@color/darkSeaGreen"
-            android:textSize="40dp"
-            android:layout_width="330dp"
+        <android.support.v7.widget.CardView
+            android:id="@+id/submitButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:text="Submit"/>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:textSize="24sp"
+            app:cardBackgroundColor="@color/green">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="25dp"
+                android:text="Submit"
+                android:textColor="@color/black_overlay"
+                android:textSize="25sp" />
+        </android.support.v7.widget.CardView>
         <!--
         android:onClick="showConfirmPopUp"
         -->
