--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="deeppurple">#7c4dff</color>
     <color name="yello">#fb8c00</color>
     <color name="green">#00bfa5</color>
+    <color name="lightgreen">#00d0b4</color>
     <color name="brightlightblue">#42a5f5</color>
     <color name="colorAccent">#FF4081</color>
     <color name="darkblue">#23283a</color>
