--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -126,22 +126,46 @@
                 android:visibility="visible" />
         </RelativeLayout>
 
-        <Button
+        <android.support.v7.widget.CardView
             android:id="@+id/updateButton"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="Update"
-            android:textColor="@color/darkSeaGreen"
-            android:textSize="40dp" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:clickable="true"
+            android:layout_margin="-15dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:textSize="24sp"
+            app:cardBackgroundColor="@color/green">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="25dp"
+                android:text="Update"
+                android:textColor="@color/black_overlay"
+                android:textSize="25sp" />
+        </android.support.v7.widget.CardView>
         <!--
         android:onClick="showConfirmPopUp"
         -->
 
     </LinearLayout>
+
+    <com.ncorti.slidetoact.SlideToActView
+        android:id="@+id/deleteSlider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:slider_icon="@drawable/ic_delete_black_24dp"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:text="Delete This Entry" />
 
     <Button
         android:id="@+id/deleteButton"
@@ -156,7 +180,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"/>
 
 
 </android.support.constraint.ConstraintLayout>
