--- a/app/src/main/res/layout/activity_tag_detail.xml
+++ b/app/src/main/res/layout/activity_tag_detail.xml
@@ -47,7 +47,7 @@
 
             <EditText
                 android:id="@+id/titleEditTextTagDetailActivity"
-                android:layout_width="256dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
@@ -98,25 +98,49 @@
                 android:inputType="textCapCharacters"
                 android:maxLength="6" />
         </RelativeLayout>
-        <Button
-            android:id="@+id/colorPickerButton"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Color Picker"
-            android:textColor="@color/darkSeaGreen"
-            android:textSize="20dp" />
-        <Button
-            android:id="@+id/updateTagDetailButton"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
 
-            android:text="Update"
-            android:textColor="@color/darkSeaGreen"
-            android:textSize="40dp" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/colorPickerButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:layout_margin="-15dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:textSize="24sp"
+            app:cardBackgroundColor="@color/lightgreen">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="12dp"
+                android:text="Color Picker"
+                android:textColor="@color/black_overlay"
+                android:textSize="20sp" />
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/updateTagDetailButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:clickable="true"
+            android:layout_margin="-15dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:textSize="24sp"
+            app:cardBackgroundColor="@color/green">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="25dp"
+                android:text="Update"
+                android:textColor="@color/black_overlay"
+                android:textSize="25sp" />
+        </android.support.v7.widget.CardView>
         <!--
         android:onClick="showConfirmPopUp"
         -->
@@ -132,11 +156,24 @@
         android:layout_marginStart="8dp"
         android:gravity="center"
         android:padding="10dp"
-        android:text="This is the default tag. You may edit it to fit your needs."
+        android:text="This is the default tag. You may edit it to fit your needs. This tag cannot be deleted."
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/deleteTagDetailButton"
+        app:layout_constraintBottom_toTopOf="@+id/deleteTagSlider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"></TextView>
+    <com.ncorti.slidetoact.SlideToActView
+        android:id="@+id/deleteTagSlider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:slider_icon="@drawable/ic_delete_black_24dp"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:text="Delete This Tag" />
     <Button
         android:id="@+id/deleteTagDetailButton"
         android:layout_width="match_parent"
@@ -150,7 +187,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"/>
 
 
 </android.support.constraint.ConstraintLayout>
