--- a/app/src/main/res/layout/activity_tags.xml
+++ b/app/src/main/res/layout/activity_tags.xml
@@ -27,8 +27,23 @@
         android:textColor="@color/white"
         android:textSize="45dp"
         android:textStyle="bold"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addTagFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:background="@drawable/circlebackgroundpink"
+        android:elevation="4dp"
+        android:padding="30dp"
+        android:onClick="showTagInfo"
+        android:clickable="true"
+        android:src="@drawable/ic_add_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tagsListView"
         app:layout_constraintEnd_toEndOf="parent" />
 
 
