--- a/app/src/main/res/layout/log_listview_detail.xml
+++ b/app/src/main/res/layout/log_listview_detail.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="29dp"
         android:layout_marginTop="13dp"
         android:text="Date"
         android:textSize="24sp" />
@@ -50,4 +50,11 @@
         android:layout_alignStart="@+id/logMainTextView"
         android:layout_below="@+id/logMainTextView"
         android:text="TAGTITLE" />
+
+    <View
+        android:id="@+id/logsListViewBudgetIdentifierView"
+        android:layout_width="13dp"
+        android:layout_height="94dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
