--- a/app/src/main/res/layout/newentrypopup.xml
+++ b/app/src/main/res/layout/newentrypopup.xml
@@ -5,10 +5,11 @@
     android:layout_width="330dp"
     android:layout_height="320dp"
     android:background="@color/lightgray"
-    android:padding="7dp"
+    android:padding="0dp"
     android:layout_gravity="center">
     <LinearLayout
-        android:layout_height="35dp"
+        android:padding="7dp"
+        android:layout_height="48dp"
         android:layout_width="match_parent">
     <TextView
         android:onClick="showInfo"
@@ -18,6 +19,7 @@
         android:textColor="@color/white"
         android:text="!"
         android:textStyle="bold"
+        android:clickable="true"
         android:gravity="center"
         android:layout_gravity="start"
         android:textSize="18dp"
@@ -31,6 +33,7 @@
         android:layout_height="30dp"
         android:textColor="@color/white"
         android:text="X"
+        android:clickable="true"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_gravity="end"
@@ -46,7 +49,7 @@
             android:layout_marginTop="10dp"
             android:layout_height="40dp"
             android:layout_width="match_parent"
-            android:text="New Entry"
+            android:text="Create a New Entry"
             android:textStyle="bold"
             android:textColor="@color/green"
             android:gravity="center"
@@ -54,7 +57,8 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="7dp">
             <LinearLayout
                 android:layout_height="40dp"
                 android:layout_width="85dp"
@@ -82,7 +86,7 @@
                 />
             <EditText
                 android:id="@+id/amountEditText"
-                android:layout_width="120dp"
+                android:layout_width="118dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Ex. 9.99"
@@ -91,7 +95,8 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="7dp">
             <LinearLayout
                 android:layout_height="40dp"
                 android:layout_width="85dp"
@@ -109,7 +114,7 @@
 
             <EditText
                 android:id="@+id/dateEditText"
-                android:layout_width="259dp"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="9dp"
 
@@ -180,7 +185,9 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="7dp"
+            android:layout_marginBottom="3dp">
             <LinearLayout
                 android:layout_height="40dp"
                 android:layout_width="85dp"
@@ -198,7 +205,7 @@
 
             <EditText
                 android:id="@+id/tagEditText"
-                android:layout_width="267dp"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="9dp"
 
@@ -208,30 +215,33 @@
         </LinearLayout>
 
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/submitButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:textSize="24sp"
-            app:cardBackgroundColor="@color/green">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="25dp"
-                android:text="Submit"
-                android:textColor="@color/black_overlay"
-                android:textSize="25sp" />
-        </android.support.v7.widget.CardView>
         <!--
         android:onClick="showConfirmPopUp"
         -->
 
     </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/submitButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:layout_margin="-16dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:textSize="24sp"
+        app:cardBackgroundColor="@color/green">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="25dp"
+            android:text="Submit"
+            android:textColor="@color/black_overlay"
+            android:textSize="25sp" />
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
