--- a/app/src/main/res/layout/tag_popup.xml
+++ b/app/src/main/res/layout/tag_popup.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="330dp"
     android:layout_height="315dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:background="@color/lightgray"
-    android:orientation="vertical"
-    android:padding="7dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="35dp">
+        android:layout_height="42dp"
+        android:paddingLeft="7dp"
+        android:paddingTop="7dp">
 
         <TextView
             android:id="@+id/txtclose"
@@ -43,7 +45,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp">
 
             <LinearLayout
                 android:layout_width="85dp"
@@ -73,7 +77,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp">
 
             <LinearLayout
                 android:layout_width="85dp"
@@ -109,23 +115,50 @@
                 android:visibility="visible" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/colorPickerButton"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Color Picker"
-            android:textColor="@color/darkSeaGreen"
-            android:textSize="20dp" />
 
-        <Button
-            android:id="@+id/submitButton"
-            android:layout_width="330dp"
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/colorPickerButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Submit"
-            android:textColor="@color/darkSeaGreen"
-            android:textSize="40dp" />
+            android:clickable="true"
+            android:layout_margin="-15dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:textSize="24sp"
+            app:cardBackgroundColor="@color/lightgreen">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="12dp"
+                android:text="Color Picker"
+                android:textColor="@color/black_overlay"
+                android:textSize="20sp" />
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/submitButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:clickable="true"
+            android:layout_margin="-15dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:textSize="24sp"
+            app:cardBackgroundColor="@color/green">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="25dp"
+                android:text="Submit"
+                android:textColor="@color/black_overlay"
+                android:textSize="25sp" />
+        </android.support.v7.widget.CardView>
         <!--
         android:onClick="showConfirmPopUp"
         -->
