--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -125,6 +125,36 @@
                 android:inputType="textCapWords|textShortMessage"
                 android:visibility="visible" />
         </RelativeLayout>
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:visibility="visible">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center"
+                android:text="Repeat"
+                android:textColor="@color/black_overlay"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/repeatSpinnerDetailActivity"
+                android:layout_width="259dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:hint="Ex. Clothing"
+                android:visibility="visible" />
+        </RelativeLayout>
 
         <android.support.v7.widget.CardView
             android:id="@+id/updateButton"
