--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="deficit">#ff1744</color>
     <color name="materialRed">#ff867f</color>
     <color name="softpurple">#ba68c8</color>
+    <color name="verylightSeaGreen">#29b4a7</color>
     <color name="lightSeaGreen">#26a69a</color>
     <color name="mediumSeaGreen">#009688</color>
     <color name="darkSeaGreen">#00897b</color>
