--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -156,27 +156,7 @@
                 android:visibility="visible" />
         </RelativeLayout>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/updateButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:clickable="true"
-            android:layout_margin="-15dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:textSize="24sp"
-            app:cardBackgroundColor="@color/green">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="25dp"
-                android:text="Update"
-                android:textColor="@color/black_overlay"
-                android:textSize="25sp" />
-        </android.support.v7.widget.CardView>
         <!--
         android:onClick="showConfirmPopUp"
         -->
@@ -190,12 +170,39 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:slider_icon="@drawable/ic_delete_black_24dp"
         android:elevation="4dp"
+        app:text_size="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/updateButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:slider_icon="@drawable/ic_delete_black_24dp"
+        app:text="Swipe To Delete" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/updateButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:textSize="24sp"
+        app:cardBackgroundColor="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:text="Delete This Entry" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="25dp"
+            android:text="Update"
+            android:textColor="@color/black_overlay"
+            android:textSize="40sp"
+            android:textStyle="bold" />
+    </android.support.v7.widget.CardView>
 
     <Button
         android:id="@+id/deleteButton"
