--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible">
+
+
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,7 +20,6 @@
         android:background="@color/backgroundcolor"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="10dp"
         tools:context=".HomeActivity">
 
 
@@ -35,7 +38,7 @@
                 android:id="@+id/newEntryCardView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="0dp"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -52,7 +55,7 @@
                         android:id="@+id/newEntryImageView"
                         android:layout_width="64dp"
                         android:layout_height="64sp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:background="@drawable/circlebackgroundpurple"
                         android:padding="10dp"
                         android:src="@drawable/ic_control_point_black_24dp" />
@@ -70,7 +73,7 @@
                         android:layout_height="0dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_weight=".3"
+                        android:layout_weight=".2"
                         android:background="@color/lightgray" />
 
                     <TextView
@@ -102,7 +105,7 @@
                 android:id="@+id/logsCardView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="0dp"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -137,7 +140,7 @@
                         android:layout_height="0dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_weight=".3"
+                        android:layout_weight=".2"
                         android:background="@color/lightgray" />
 
                     <TextView
@@ -157,7 +160,7 @@
                 android:id="@+id/budgetLeftCardView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="0dp"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -172,8 +175,9 @@
                     <TextView
                         android:id="@+id/budgetNumTextView"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_height="64dp"
+                        android:padding="10dp"
+                        android:layout_marginTop="5dp"
                         android:gravity="center"
                         android:text="$11800"
                         android:textColor="@color/green"
@@ -194,7 +198,7 @@
                         android:layout_height="0dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_weight=".3"
+                        android:layout_weight=".2"
                         android:background="@color/lightgray" />
 
                     <TextView
@@ -224,7 +228,7 @@
                 android:id="@+id/tagsCardView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="0dp"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -260,7 +264,7 @@
                         android:layout_height="0dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_weight=".3"
+                        android:layout_weight=".2"
                         android:background="@color/lightgray" />
 
                     <TextView
@@ -279,7 +283,7 @@
                 android:id="@+id/analysisCardView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="0dp"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -313,7 +317,7 @@
                         android:layout_height="0dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_weight=".3"
+                        android:layout_weight=".2"
                         android:background="@color/lightgray" />
 
                     <TextView
@@ -344,7 +348,7 @@
                 android:id="@+id/settingsCardView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="0dp"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -378,7 +382,7 @@
                         android:layout_height="0dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_weight=".3"
+                        android:layout_weight=".2"
                         android:background="@color/lightgray" />
 
                     <TextView
@@ -397,7 +401,7 @@
                 android:id="@+id/aboutCardView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_margin="0dp"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -430,7 +434,7 @@
                         android:layout_height="0dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_weight=".3"
+                        android:layout_weight=".2"
                         android:background="@color/lightgray" />
 
                     <TextView
