--- a/app/src/main/res/layout/activity_tag_detail.xml
+++ b/app/src/main/res/layout/activity_tag_detail.xml
@@ -99,48 +99,7 @@
                 android:maxLength="6" />
         </RelativeLayout>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/colorPickerButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:layout_margin="-15dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:textSize="24sp"
-            app:cardBackgroundColor="@color/lightgreen">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="12dp"
-                android:text="Color Picker"
-                android:textColor="@color/black_overlay"
-                android:textSize="20sp" />
-        </android.support.v7.widget.CardView>
-
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/updateTagDetailButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:clickable="true"
-            android:layout_margin="-15dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:textSize="24sp"
-            app:cardBackgroundColor="@color/green">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="25dp"
-                android:text="Update"
-                android:textColor="@color/black_overlay"
-                android:textSize="25sp" />
-        </android.support.v7.widget.CardView>
         <!--
         android:onClick="showConfirmPopUp"
         -->
@@ -169,11 +128,62 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         app:slider_icon="@drawable/ic_delete_black_24dp"
+        app:text_size="22sp"
         android:elevation="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/colorPickerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:text="Delete This Tag" />
+        app:text="Swipe To Delete"/>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/colorPickerButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:layout_marginTop="10dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/lightgreen"
+        app:layout_constraintBottom_toTopOf="@id/updateTagDetailButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="12dp"
+            android:text="Color Picker"
+            android:textStyle="bold"
+            android:textColor="@color/black_overlay"
+            android:textSize="24sp" />
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/updateTagDetailButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:layout_margin="-15dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:textSize="24sp"
+        app:cardBackgroundColor="@color/green"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="25dp"
+            android:text="Update"
+            android:textStyle="bold"
+            android:textColor="@color/black_overlay"
+            android:textSize="40sp" />
+    </android.support.v7.widget.CardView>/>
     <Button
         android:id="@+id/deleteTagDetailButton"
         android:layout_width="match_parent"
